feat: some fixes

--- a/src/html/includes/main/contacts.html
+++ b/src/html/includes/main/contacts.html
@@ -1,12 +1,11 @@
-<section class="contacts">
-  <div class="contacts__container section-container">
-    <div class="contacts-title title-underline">
-      <h2 class="contacts-title__text title">Contacts</h2>
-    </div>
-    <div class="contacts-body">
-      <div class="contacts-body__text">
-        <span class="contacts-body__text-title"
-          >Palais Royal <br />
+<section id="contacts" class="contacts">
+    <div class="contacts__container section-container">
+        <div class="contacts-title title-underline">
+            <h2 class="contacts-title__text title">Contacts</h2>
+        </div>
+        <div class="contacts-body">
+            <div class="contacts-body__text">
+                <span class="contacts-body__text-title">Palais Royal <br />
           Musee du Louvre</span
         >
         <ul class="contacts-list">
