feat: some fixes

--- a/src/html/includes/main/journey.html
+++ b/src/html/includes/main/journey.html
@@ -1,20 +1,14 @@
 <section id="video" class="journey">
-  <div class="journey__container section-container">
-    <div class="journey-heading">
-      <h2 class="title">Video journey</h2>
-      <p class="journey-heading__desc-text">
-        Enter and visit one of the most famous museums in the world and enjoy masterpieces such as
-        Mona Lisa or Hammurabi's Code
-      </p>
-    </div>
-    <div class="journey-player">
-      <video
-        class="journey-player__video"
-        src="./uploads/journey.mp4"
-        muted
-        poster="./img/journey/poster0.webp"
-      ></video>
-      <button class="journey-player__main-play-btn">
+    <div class="journey__container section-container">
+        <div class="journey-heading">
+            <h2 class="title">Video journey</h2>
+            <p class="journey-heading__desc-text">
+                Enter and visit one of the most famous museums in the world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code
+            </p>
+        </div>
+        <div class="journey-player">
+            <video class="journey-player__video" src="./uploads/journey.mp4" muted poster="./img/journey/poster0.webp"></video>
+            <button class="journey-player__main-play-btn">
         <svg
           class="journey-player__main-play-icon"
           width="220"
@@ -33,8 +27,8 @@
           />
         </svg>
       </button>
-      <div class="journey-player__navbar">
-        <button class="navbar__play-btn">
+            <div class="journey-player__navbar">
+                <button class="navbar__play-btn">
           <svg
             class="play-icon"
             width="23"
@@ -46,8 +40,8 @@
             <path d="M23 15.5053L0 0C0 23.3683 0 11.8996 0 31L23 15.5053Z" fill="#B3B3B3" />
           </svg>
         </button>
-        <input class="navbar__play-bar" type="range" />
-        <button class="navbar__volume-btn">
+                <input class="navbar__play-bar" type="range" />
+                <button class="navbar__volume-btn">
           <svg
             class="volume-icon"
             width="38"
@@ -70,8 +64,8 @@
             />
           </svg>
         </button>
-        <input class="navbar__volume-bar" type="range" />
-        <button class="navbar__fullscreen-btn">
+                <input class="navbar__volume-bar" type="range" />
+                <button class="navbar__fullscreen-btn">
           <svg
             class="fullscreen-icon"
             width="35"
@@ -89,98 +83,34 @@
             <path d="M22.4097 0V4.12222H30.6055V12.3569H34.7083V0H22.4097Z" fill="#B3B3B3" />
           </svg>
         </button>
-      </div>
+            </div>
+        </div>
+        <div class="journey-slider">
+            <div class="journey-slider-inner swiper">
+                <div class="video-list swiper-wrapper">
+                    <iframe class="slider-video swiper-slide" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1" allowfullscreen></iframe>
+                    <iframe class="slider-video swiper-slide" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/Vi5D6FKhRmo?rel=0&amp;mute=1" allowfullscreen></iframe>
+                    <iframe class="slider-video swiper-slide" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" allowfullscreen></iframe>
+                    <iframe class="slider-video swiper-slide" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" allowfullscreen></iframe>
+                    <iframe class="slider-video swiper-slide" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" allowfullscreen></iframe>
+                    <iframe class="slider-video swiper-slide" width="380" height="220" loading="lazy" src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1" allowfullscreen></iframe>
+
+                </div>
+            </div>
+            <div class="journey-slider__nav">
+                <div class="journey-slider__btn-prev swiper-button-prev">
+                    <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M5.4777 0.219168C5.87773 0.564178 5.94259 1.19347 5.62256 1.62473L2.37578 6.00004L5.62256 10.3753C5.94259 10.8066 5.87773 11.4359 5.4777 11.7809C5.07766 12.1259 4.49394 12.056 4.17391 11.6247L0 6.00004L4.17391 0.375342C4.49394 -0.0559202 5.07766 -0.125842 5.4777 0.219168ZM9.65184 0.219168C10.0519 0.564178 10.1167 1.19347 9.7967 1.62473L6.54992 6.00004L9.7967 10.3753C10.1167 10.8066 10.0519 11.4359 9.65184 11.7809C9.2518 12.1259 8.66808 12.056 8.34805 11.6247L4.17414 6.00004L8.34805 0.375342C8.66808 -0.0559202 9.2518 -0.125842 9.65184 0.219168Z" fill="#999999"/>
+                </svg>
+                </div>
+                <div class="journey-slider__pagination swiper-pagination">
+                </div>
+                <div class="journey-slider__btn-next swiper-button-next">
+                    <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M0.348163 0.219168C0.748196 -0.125842 1.33192 -0.0559202 1.65195 0.375342L5.82586 6.00004L1.65194 11.6247C1.33192 12.056 0.748195 12.1259 0.348162 11.7809C-0.0518709 11.4359 -0.116729 10.8066 0.203297 10.3753L3.45008 6.00004L0.203298 1.62473C-0.116728 1.19347 -0.05187 0.564177 0.348163 0.219168ZM4.5223 0.219168C4.92234 -0.125841 5.50606 -0.0559197 5.82609 0.375342L10 6.00004L5.82609 11.6247C5.50606 12.056 4.92234 12.1259 4.5223 11.7809C4.12227 11.4359 4.05741 10.8066 4.37744 10.3753L7.62422 6.00004L4.37744 1.62473C4.05741 1.19347 4.12227 0.564178 4.5223 0.219168Z" fill="#999999"/>
+                </svg>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="journey-slider swiper">
-      <ul class="slider__list swiper-wrapper">
-        <li class="slider__list-item swiper-slide">
-          <iframe
-            class="slider-video"
-            loading="lazy"
-            width="300"
-            height="220"
-            src="https://www.youtube.com/embed/aWmJ5DgyWPI?rel=0&amp;mute=1"
-            allowfullscreen
-          ></iframe>
-        </li>
-        <li class="slider__list-item swiper-slide">
-          <iframe
-            class="slider-video"
-            loading="lazy"
-            width="300"
-            height="220"
-            src="https://www.youtube.com/embed/Vi5D6FKhRmo?rel=0&amp;mute=1"
-            allowfullscreen
-          ></iframe>
-        </li>
-        <li class="slider__list-item swiper-slide">
-          <iframe
-            class="slider-video"
-            loading="lazy"
-            width="300"
-            height="220"
-            src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1"
-            allowfullscreen
-          ></iframe>
-        </li>
-        <li class="slider__list-item swiper-slide">
-          <iframe
-            class="slider-video"
-            loading="lazy"
-            width="300"
-            height="220"
-            src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1"
-            allowfullscreen
-          ></iframe>
-        </li>
-        <li class="slider__list-item swiper-slide">
-          <iframe
-            class="slider-video"
-            loading="lazy"
-            width="300"
-            height="220"
-            src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1"
-            allowfullscreen
-          ></iframe>
-        </li>
-        <li class="slider__list-item swiper-slide">
-          <iframe
-            class="slider-video"
-            loading="lazy"
-            width="300"
-            height="220"
-            src="https://www.youtube.com/embed/NOhDysLnTvY?rel=0&amp;mute=1"
-            allowfullscreen
-          ></iframe>
-        </li>
-      </ul>
-      <div class="slider-pagination swiper-pagination"></div>
-      <svg
-        class="slider-next-btn swiper-button-next"
-        width="30"
-        height="40"
-        viewBox="0 0 30 40"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M4.26785 39.4674L29.2678 21.2851C29.7367 20.9443 30 20.4818 30 19.9996C30 19.5173 29.7365 19.0548 29.2677 18.7139L4.26768 0.532545C3.29135 -0.177515 1.70852 -0.177515 0.732188 0.532545C-0.243978 1.24248 -0.244145 2.39376 0.732188 3.10382L23.9643 19.9996L0.732188 36.8962C0.244021 37.2512 2.05636e-05 37.7165 2.05636e-05 38.1819C2.05636e-05 38.6472 0.24402 39.1125 0.732353 39.4676C1.70869 40.1775 3.29152 40.1775 4.26785 39.4674Z"
-          fill="#B3B3B3"
-        />
-      </svg>
-      <svg
-        class="slider-prev-btn swiper-button-prev"
-        width="30"
-        height="40"
-        viewBox="0 0 30 40"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M25.7321 0.532564L0.732166 18.7149C0.263333 19.0557 0 19.5182 0 20.0004C0 20.4827 0.263499 20.9452 0.732332 21.2861L25.7323 39.4675C26.7086 40.1775 28.2915 40.1775 29.2678 39.4675C30.244 38.7575 30.2441 37.6062 29.2678 36.8962L6.03566 20.0004L29.2678 3.10383C29.756 2.7488 30 2.28347 30 1.81814C30 1.3528 29.756 0.887472 29.2676 0.532442C28.2913 -0.177497 26.7085 -0.177496 25.7321 0.532564Z"
-          fill="#B3B3B3"
-        />
-      </svg>
-    </div>
-  </div>
 </section>
