--- a/src/html/includes/main/tickets.html
+++ b/src/html/includes/main/tickets.html
@@ -8,7 +8,7 @@
             <div class="tickets-type">
                 <span class="tickets-type__title">Ticket Type</span>
                 <label class="tickets-type__bar-title" for="permanent">
-          <input class="tickets-type__bar" type="radio" name="ticket-type" id="permanent" />
+          <input class="tickets-type__bar" type="radio" name="ticket-type" id="permanent" checked/>
           Permanent exhibition
         </label>
                 <label class="tickets-type__bar-title" for="temporary">
@@ -26,7 +26,7 @@
                     <label class="amount-field-title" for="amount-top-value">Basic 18+</label>
                     <div class="amount-field-row">
                         <span class="amount-field-row__decrease"></span>
-                        <input class="amount-field-row__value" type="text" id="amount-top-value" />
+                        <input class="amount-field-row__value" type="number" id="amount-top-value" value="1" />
                         <span class="amount-field-row__increase"></span>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
                     <label class="amount-field-title" for="amount-top-value">Senior 65+</label>
                     <div class="amount-field-row">
                         <span class="amount-field-row__decrease"></span>
-                        <input class="amount-field-row__value" type="text" id="amount-bottom-value" />
+                        <input class="amount-field-row__value" type="number" id="amount-bottom-value" value="1" />
                         <span class="amount-field-row__increase"></span>
                     </div>
                 </div>
@@ -45,5 +45,133 @@
                 <button class="tickets-amount__btn">Buy Now</button>
             </div>
         </div>
+        <form class="tickets-form" action="">
+            <div class="tickets-form__wrapper">
+                <div class="tickets-form__left">
+                    <svg class="tickets-form__logo-image" width="85" height="41" viewBox="0 0 49 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M49 26H0L24.5 0L49 26ZM13.3075 13.1309L16.6442 16.6702L19.981 13.1309L16.6442 9.58115L13.3075 13.1309ZM16.6442 25.0052L19.981 21.466L16.6442 17.9162L13.3075 21.466L16.6442 25.0052ZM32.4083 25.0052L35.745 21.466L32.4083 17.9162L29.019 21.466L32.4083 25.0052ZM28.4673 5.40314C28.4473 5.43762 28.4207 5.46941 28.3885 5.49738C27.3507 6.6178 26.2997 7.73822 25.2357 8.84817C25.1437 8.94241 25.2357 9.00524 25.2357 9.08901L28.3097 12.356L28.4542 12.4921L31.7909 8.96335L28.4673 5.40314ZM8.78847 25.0052L8.91984 24.8691L11.9938 21.6126C12.0428 21.5717 12.0702 21.5173 12.0702 21.4607C12.0702 21.4042 12.0428 21.3498 11.9938 21.3089C11.0611 20.3456 10.1547 19.3613 9.23512 18.3874L8.78847 17.9162L5.45174 21.466L8.78847 25.0052ZM17.2354 8.95288L20.5721 12.4921L20.6772 12.3979L23.8169 9.06806C23.922 8.95288 23.8169 8.89005 23.8169 8.80628L20.7429 5.56021L20.6115 5.42408L17.2354 8.95288ZM17.2354 17.3298L20.5721 20.8691L20.7429 20.7016C21.7413 19.6545 22.7528 18.6073 23.7643 17.4869C23.7926 17.4663 23.8152 17.4412 23.8307 17.4133C23.8461 17.3853 23.8541 17.3551 23.8541 17.3246C23.8541 17.2941 23.8461 17.2639 23.8307 17.2359C23.8152 17.208 23.7926 17.1829 23.7643 17.1623C22.8185 16.1675 21.8727 15.1728 20.9399 14.1675L20.5721 13.7906L17.2354 17.3298ZM32.9995 17.3298L36.3362 20.8691L39.6729 17.3298L36.3362 13.7906L32.9995 17.3298ZM28.4673 13.7801V13.8534L25.3013 17.2147C25.1962 17.3089 25.2357 17.3717 25.3013 17.4555L28.244 20.5969C28.3228 20.6911 28.4147 20.7853 28.5198 20.8901L31.8566 17.3508L28.4673 13.7801ZM12.7295 20.8482C12.7453 20.8175 12.7675 20.7892 12.7952 20.7644L15.9611 17.4031C16.0531 17.2984 15.9611 17.2461 15.9611 17.1623L12.8477 13.8953C12.8069 13.8484 12.7583 13.8061 12.7032 13.7696L9.37962 17.2984L12.7295 20.8482ZM32.3558 16.6597L35.6925 13.1204L32.3558 9.59162L29.019 13.1309L32.3558 16.6597ZM24.4737 8.28272L27.8105 4.74346L24.5263 1.27749H24.4606L21.2552 4.71204C21.2354 4.73712 21.2249 4.76616 21.2249 4.79581C21.2249 4.82546 21.2354 4.8545 21.2552 4.87958L24.4737 8.28272ZM24.4737 16.6597L27.8105 13.1204L24.5 9.58115L21.1633 13.1309L24.4737 16.6597ZM24.4737 25.0366L27.8105 21.4974L24.4737 17.9476L21.1633 21.466L24.4737 25.0366ZM40.2378 25.0366L43.5745 21.4974L40.2509 17.9791H40.1853L36.9668 21.3613C36.8617 21.4764 36.9668 21.5288 36.9668 21.6021L39.5941 24.4398L40.2378 25.0366ZM1.89169 25.2356H7.88204L4.91314 22.0942L1.89169 25.2356ZM41.1705 25.2356H47.1083L44.1394 22.0942L41.1705 25.2356ZM23.5542 25.2356L20.5721 22.0942L17.5901 25.2356H23.5542ZM33.3147 25.2356H39.2525L36.2836 22.0942L33.3147 25.2356ZM31.3968 25.2356L28.4279 22.0942L25.459 25.2356H31.3968ZM15.6327 25.2356L12.6638 22.0942L9.69491 25.2356H15.6327Z"
+                    fill="white"
+                  />
+                </svg>
+                    <h2 class="tickets-form__title title">Booking tickets</h2>
+                    <span class="tickets-form__subtitle">Tour to Louvre</span>
+                    <div class="tickets-form__term">
+                        <div class="tickets-field">
+                            <svg class="tickets-field__icon" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M13.585 1.2169H12.0982V0.498731C12.0982 0.366459 12.045 0.239612 11.9502 0.146082C11.8555 0.0525519 11.7269 0 11.5929 0C11.4589 0 11.3303 0.0525519 11.2356 0.146082C11.1408 0.239612 11.0875 0.366459 11.0875 0.498731V1.21292H3.91146V0.498731C3.91146 0.366459 3.85822 0.239612 3.76345 0.146082C3.66868 0.0525519 3.54014 0 3.40611 0C3.27208 0 3.14354 0.0525519 3.04877 0.146082C2.954 0.239612 2.90075 0.366459 2.90075 0.498731V1.21292H1.415C1.04059 1.21291 0.681447 1.35937 0.416228 1.62017C0.151009 1.88098 0.00133717 2.2349 0 2.60439V3.85618H14.996V2.60439C14.9936 2.23628 14.844 1.88399 14.5798 1.62416C14.3155 1.36433 13.958 1.21795 13.585 1.2169Z" fill="#030303"/>
+                          <path d="M0 13.6086C0.00133717 13.9781 0.151009 14.332 0.416228 14.5928C0.681447 14.8536 1.04059 15 1.415 15H13.585C13.9594 15 14.3186 14.8536 14.5838 14.5928C14.849 14.332 14.9987 13.9781 15 13.6086V4.93066H0V13.6086ZM7.075 11.868C7.11993 11.3985 7.26002 10.9427 7.48695 10.5277C7.71388 10.1127 8.02302 9.74693 8.396 9.45215C9.09541 8.72799 9.27835 8.50356 9.27835 7.939C9.27835 7.51009 9.16616 7.17495 8.67192 7.17495C8.17769 7.17495 8.02709 7.53204 8.00384 8.10258H7.11138C7.08791 7.8893 7.11245 7.67353 7.18324 7.47068C7.25404 7.26783 7.36934 7.0829 7.52092 6.92912C7.6725 6.77533 7.85662 6.65648 8.06013 6.58104C8.26364 6.50559 8.48151 6.47541 8.6982 6.49267C8.90216 6.46456 9.10993 6.4829 9.30559 6.54627C9.50126 6.60965 9.67963 6.7164 9.82704 6.85831C9.97446 7.00023 10.087 7.17355 10.156 7.36502C10.2251 7.55649 10.2488 7.76101 10.2254 7.96293C10.2254 8.63222 10.0232 8.98734 9.26016 9.72446C8.78529 10.1283 8.40375 10.6279 8.1413 11.1897H10.382L10.2567 11.9189H7.075V11.868ZM4.67657 6.96747C5.047 6.91623 5.39635 6.76661 5.68728 6.53458H6.30281V11.9209H5.38104V7.53205C5.14897 7.58539 4.91179 7.61414 4.67354 7.61783L4.67657 6.96747Z" fill="#030303"/>
+                          </svg>
+                            <ul class="tickets-field__droplist">
+                                <li class="tickets-field__droplist-item">01.01.2022</li>
+                                <li class="tickets-field__droplist-item">01.01.2022</li>
+                                <li class="tickets-field__droplist-item">01.01.2022</li>
+                            </ul>
+
+                        </div>
+                        <div class="tickets-field">
+                            <svg class="tickets-field__icon" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M7.50171 0.000244337C6.01828 -9.5276e-05 4.56807 0.439487 3.33447 1.26339C2.10088 2.08729 1.13931 3.25852 0.571386 4.62894C0.00346539 5.99935 -0.145286 7.50739 0.143909 8.96236C0.433104 10.4173 1.14726 11.7539 2.19609 12.8029C3.24491 13.852 4.5813 14.5665 6.0362 14.856C7.4911 15.1455 8.99918 14.9971 10.3697 14.4295C11.7403 13.8619 12.9117 12.9006 13.7359 11.6672C14.5601 10.4338 15 8.98368 15 7.50025C15.0001 6.51545 14.8063 5.54026 14.4295 4.63038C14.0527 3.7205 13.5004 2.89375 12.8042 2.19731C12.1079 1.50087 11.2812 0.948397 10.3714 0.571426C9.46164 0.194456 8.48651 0.000357073 7.50171 0.000244337ZM10.4061 10.0191C10.3701 10.0698 10.3245 10.1128 10.2718 10.1458C10.2192 10.1787 10.1605 10.201 10.0992 10.2112C10.038 10.2214 9.97529 10.2194 9.9148 10.2053C9.8543 10.1912 9.79717 10.1653 9.74672 10.129L6.966 8.14328V3.93656C6.9761 3.81828 7.03021 3.70808 7.11765 3.62779C7.20509 3.5475 7.31947 3.50295 7.43818 3.50295C7.55689 3.50295 7.67127 3.5475 7.75871 3.62779C7.84614 3.70808 7.90028 3.81828 7.91038 3.93656V7.65735L10.2919 9.36065C10.3428 9.39628 10.3861 9.4416 10.4194 9.49403C10.4527 9.54646 10.4753 9.60497 10.4859 9.66617C10.4965 9.72736 10.4949 9.79004 10.4812 9.85061C10.4675 9.91119 10.442 9.96845 10.4061 10.0191Z" fill="#030303"/>
+                          </svg>
+                            <select class="tickets-field__droplist" name="" id="">
+                          <option class="tickets-field__droplist-item" disabled selected hidden value="">Time</option>
+                          <option class="tickets-field__droplist-item" value="">08:20</option>
+                          <option class="tickets-field__droplist-item" value="">10:20</option>
+                          <option class="tickets-field__droplist-item" value="">16:20</option>
+                        </select>
+                        </div>
+                    </div>
+                    <input class="tickets-form__username-field" type="text">
+                    <input class="tickets-form__email-field" type="text">
+                    <input class="tickets-form__phone-field" type="text">
+                    <div class="tickets-field">
+                        <svg class="tickets-field__icon" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" clip-rule="evenodd" d="M8.33333 5.41667H12.5V3.75H8.33333V5.41667ZM8.33333 11.25H12.5V9.58333H8.33333V11.25ZM13.3333 15H1.66667C0.75 15 0 14.25 0 13.3333V1.66667C0 0.75 0.75 0 1.66667 0H13.3333C14.25 0 15 0.75 15 1.66667V13.3333C15 14.25 14.25 15 13.3333 15ZM2.5 6.66667H6.66667V2.5H2.5V6.66667ZM3.33333 3.33333H5.83333V5.83333H3.33333V3.33333ZM2.5 12.5H6.66667V8.33333H2.5V12.5ZM3.33333 9.16667H5.83333V11.6667H3.33333V9.16667Z" fill="#030303"/>
+                    </svg>
+                        <select class="tickets-field__droplist" name="" id="">
+                      <option class="tickets-field__droplist-item" value=""></option>
+                      <option class="tickets-field__droplist-item" value=""></option>
+                      <option class="tickets-field__droplist-item" value=""></option>
+                      </select>
+                    </div>
+                    <div class="tickets__entry">
+                        <span class="entry__title">Entry ticket</span>
+                        <div class="entry__row">
+                            <label class="entry__row-text" for="">Basic 18+ (<span class="entry__row-price price-basic">20</span> €)</label>
+                            <div class="entry__counter">
+                                <span class="entry__counter-increase"></span>
+                                <input class="entry__counter-field" type="text">
+                                <span class="entry__counter-decrease"></span>
+                            </div>
+                        </div>
+                        <div class="entry__row">
+                            <label class="entry__row-text" for="">Senior 65+ (<span class="entry__row-price price-senior">10</span> €)</label>
+                            <div class="entry__counter">
+                                <span class="entry__counter-increase"></span>
+                                <input class="entry__counter-field" type="text">
+                                <span class="entry__counter-decrease"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tickets-form__overview">
+                    <p class="tickets-form__overview-title">Overview</p>
+                    <span class="tickets-form__overview-subtitle">Tour to Louvre</span>
+                    <div class="overview__row">
+                        <svg class="overview__row-icon" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M13.585 1.2169H12.0982V0.498731C12.0982 0.366459 12.045 0.239612 11.9502 0.146082C11.8555 0.0525519 11.7269 0 11.5929 0C11.4589 0 11.3303 0.0525519 11.2356 0.146082C11.1408 0.239612 11.0875 0.366459 11.0875 0.498731V1.21292H3.91146V0.498731C3.91146 0.366459 3.85822 0.239612 3.76345 0.146082C3.66868 0.0525519 3.54014 0 3.40611 0C3.27208 0 3.14354 0.0525519 3.04877 0.146082C2.954 0.239612 2.90075 0.366459 2.90075 0.498731V1.21292H1.415C1.04059 1.21291 0.681447 1.35937 0.416228 1.62017C0.151009 1.88098 0.00133717 2.2349 0 2.60439V3.85618H14.996V2.60439C14.9936 2.23628 14.844 1.88399 14.5798 1.62416C14.3155 1.36433 13.958 1.21795 13.585 1.2169Z" fill="#030303"/>
+                    <path d="M0 13.6086C0.00133717 13.9781 0.151009 14.332 0.416228 14.5928C0.681447 14.8536 1.04059 15 1.415 15H13.585C13.9594 15 14.3186 14.8536 14.5838 14.5928C14.849 14.332 14.9987 13.9781 15 13.6086V4.93066H0V13.6086ZM7.075 11.868C7.11993 11.3985 7.26002 10.9427 7.48695 10.5277C7.71388 10.1127 8.02302 9.74693 8.396 9.45215C9.09541 8.72799 9.27835 8.50356 9.27835 7.939C9.27835 7.51009 9.16616 7.17495 8.67192 7.17495C8.17769 7.17495 8.02709 7.53204 8.00384 8.10258H7.11138C7.08791 7.8893 7.11245 7.67353 7.18324 7.47068C7.25404 7.26783 7.36934 7.0829 7.52092 6.92912C7.6725 6.77533 7.85662 6.65648 8.06013 6.58104C8.26364 6.50559 8.48151 6.47541 8.6982 6.49267C8.90216 6.46456 9.10993 6.4829 9.30559 6.54627C9.50126 6.60965 9.67963 6.7164 9.82704 6.85831C9.97446 7.00023 10.087 7.17355 10.156 7.36502C10.2251 7.55649 10.2488 7.76101 10.2254 7.96293C10.2254 8.63222 10.0232 8.98734 9.26016 9.72446C8.78529 10.1283 8.40375 10.6279 8.1413 11.1897H10.382L10.2567 11.9189H7.075V11.868ZM4.67657 6.96747C5.047 6.91623 5.39635 6.76661 5.68728 6.53458H6.30281V11.9209H5.38104V7.53205C5.14897 7.58539 4.91179 7.61414 4.67354 7.61783L4.67657 6.96747Z" fill="#030303"/>
+                    </svg>
+                        <span class="overview__row-text date-text">Friday, August 19</span>
+                    </div>
+                    <div class="overview__row">
+                        <svg class="overview__row-icon" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M7.50171 0.000244337C6.01828 -9.5276e-05 4.56807 0.439487 3.33447 1.26339C2.10088 2.08729 1.13931 3.25852 0.571386 4.62894C0.00346539 5.99935 -0.145286 7.50739 0.143909 8.96236C0.433104 10.4173 1.14726 11.7539 2.19609 12.8029C3.24491 13.852 4.5813 14.5665 6.0362 14.856C7.4911 15.1455 8.99918 14.9971 10.3697 14.4295C11.7403 13.8619 12.9117 12.9006 13.7359 11.6672C14.5601 10.4338 15 8.98368 15 7.50025C15.0001 6.51545 14.8063 5.54026 14.4295 4.63038C14.0527 3.7205 13.5004 2.89375 12.8042 2.19731C12.1079 1.50087 11.2812 0.948397 10.3714 0.571426C9.46164 0.194456 8.48651 0.000357073 7.50171 0.000244337ZM10.4061 10.0191C10.3701 10.0698 10.3245 10.1128 10.2718 10.1458C10.2192 10.1787 10.1605 10.201 10.0992 10.2112C10.038 10.2214 9.97529 10.2194 9.9148 10.2053C9.8543 10.1912 9.79717 10.1653 9.74672 10.129L6.966 8.14328V3.93656C6.9761 3.81828 7.03021 3.70808 7.11765 3.62779C7.20509 3.5475 7.31947 3.50295 7.43818 3.50295C7.55689 3.50295 7.67127 3.5475 7.75871 3.62779C7.84614 3.70808 7.90028 3.81828 7.91038 3.93656V7.65735L10.2919 9.36065C10.3428 9.39628 10.3861 9.4416 10.4194 9.49403C10.4527 9.54646 10.4753 9.60497 10.4859 9.66617C10.4965 9.72736 10.4949 9.79004 10.4812 9.85061C10.4675 9.91119 10.442 9.96845 10.4061 10.0191Z" fill="#030303"/>
+                    </svg>
+                        <span class="overview__row-text time-text">16 : 30</span>
+                    </div>
+                    <div class="overview__row">
+                        <svg class="overview__row-icon" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M10.9425 4.18524L6 9.12774L3.3075 6.44274L2.25 7.50024L6 11.2502L12 5.25024L10.9425 4.18524ZM7.5 0.000244141C3.36 0.000244141 0 3.36024 0 7.50024C0 11.6402 3.36 15.0002 7.5 15.0002C11.64 15.0002 15 11.6402 15 7.50024C15 3.36024 11.64 0.000244141 7.5 0.000244141ZM7.5 13.5002C4.185 13.5002 1.5 10.8152 1.5 7.50024C1.5 4.18524 4.185 1.50024 7.5 1.50024C10.815 1.50024 13.5 4.18524 13.5 7.50024C13.5 10.8152 10.815 13.5002 7.5 13.5002Z" fill="black"/>
+                    </svg>
+                        <span class="overview__row-text ticket-type-text">Temporary exhibition</span>
+                    </div>
+                    <div class="overview__row-age">
+                        <div class="row-age__container">
+                            <span class="row-age__count">2</span>
+                            <span class="row-age__count-text">Basic (<span class="row-age__count-price price-basic">20</span>€)</span>
+                        </div>
+                        <span class="row-age__total-price total-price-basic">40</span>€
+                    </div>
+                    <div class="overview__row-age">
+                        <div class="row-age__container">
+                            <span class="row-age__count">2</span>
+                            <span class="row-age__count-text">Senior (<span class="row-age__count-price price-senior">10</span>€)</span>
+                        </div>
+                        <span class="row-age__total-price total-price-senior">20</span>€
+                    </div>
+                    <div class="overview__total-summ">
+                        <span class="total-summ__text">Total:</span>
+                        <span class="total-summ__price">60</span>€
+                    </div>
+                    <div class="">
+                        <div class="">
+                            <label class="" for=""></label>
+                            <input class="" type="text">
+                            <label class="" for=""></label>
+                            <input class="" type="text">
+                            <input class="" type="text">
+                            <label class="" for=""></label>
+                            <input class="" type="text">
+                        </div>
+                        <div class="">
+                            <label class="" for=""></label>
+                            <input class="" type="text" name="" id="">
+                            <p class=""></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
 </section>
