--- a/src/scss/base/root.scss
+++ b/src/scss/base/root.scss
@@ -6,4 +6,5 @@
     --palette-primary-text: #FFFFFF;
     --palette-secondary-text: #030303;
     --palette-tertiary-text: #9d8665;
+    --palette-tertiary-main: #E7E7E7;
 }
